<resources>
    <string name="app_name">Thirty</string>

    <string name="rollNr">Roll nr: 0</string>
    <string name="dice1Description">dice1</string>
    <string name="dice2Description">dice2</string>
    <string name="dice3Description">dice3</string>
    <string name="dice4Description">dice4</string>
    <string name="dice5Description">dice5</string>
    <string name="dice6Description">dice6</string>

    <string name="totalScoreText">Total score: 0</string>
    <string name="currentScoreText">Current score: 0</string>
    <string name="btnRollText">Roll!</string>
    <string name="btnAddText">Add</string>
    <string name="btnNext">Next</string>

    <string name="CurrentDropDownItems">Alternative: </string>
    <string name="item_label">Scoring</string>
    <string name="auto_complete_label">Select scoring category</string>

    <string name="totalScoreTitle">Total score</string>
    <string name="roundScoreTitle">Rounds</string>
    <string name="restartBtn">Restart</string>

</resources>