<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDiceContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibDice1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/dice1Description"
                android:onClick=""
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/white1"
                tools:ignore="OnClick" />

            <ImageButton
                android:id="@+id/ibDice2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/dice2Description"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/ibDice1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/white1" />

            <ImageButton
                android:id="@+id/ibDice3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/dice3Description"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ibDice2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/white1" />

            <ImageButton
                android:id="@+id/ibDice4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/dice4Description"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibDice1"
                app:srcCompat="@drawable/white1" />

            <ImageButton
                android:id="@+id/ibDice5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/dice5Description"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ibDice4"
                app:layout_constraintTop_toBottomOf="@+id/ibDice2"
                app:srcCompat="@drawable/white1" />

            <ImageButton
                android:id="@+id/ibDice6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/dice6Description"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ibDice5"
                app:layout_constraintTop_toBottomOf="@+id/ibDice3"
                app:srcCompat="@drawable/white1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalScoreText"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDiceContainer" />

    <TextView
        android:id="@+id/tvCurrentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentScoreText"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalScore" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnAddText"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentScore" />

    <Button
        android:id="@+id/btnRoll"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/btnRollText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent">

        <AutoCompleteTextView
            android:id="@+id/auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_label"
            android:inputType="none"
            android:maxWidth="488dp"
            android:text="@string/auto_complete_label" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btnNext"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCurrentDropDownItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/CurrentDropDownItems"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>